kubernetes/technitium/dns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium
  labels:
    app.kubernetes.io/name: technitium
    homelab.lobotechworks.pt/load-balancer: main
  annotations:
    lbipam.cilium.io/ips: 192.168.1.230
spec:
  type: LoadBalancer
  loadBalancerClass: io.cilium/l2-announcer
  externalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/name: technitium
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
