kubernetes/technitium/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-web
  labels:
    app.kubernetes.io/name: technitium
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: technitium
  ports:
    - name: web-http
      port: 5380
      targetPort: web-http
      protocol: TCP
